--- a/Task 7.Aggregate Functions.ipynb
+++ b/Task 7.Aggregate Functions.ipynb
@@ -69,7 +69,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 22,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -90,13 +89,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>YEAR</th><th>avg sales</th></tr>",
-                            "<tr><td>2019</td><td>226.827209</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>YEAR</th><th>avg sales</th></tr><tr><td>2019</td><td>226.827209</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 22
@@ -141,7 +136,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 30,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -162,13 +156,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>YEAR</th><th>AVG PROFIT</th></tr>",
-                            "<tr><td>2019</td><td>152.832537</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>YEAR</th><th>AVG PROFIT</th></tr><tr><td>2019</td><td>152.832537</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 30
@@ -210,7 +200,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 43,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -227,13 +216,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>most_profit_sales</th></tr>",
-                            "<tr><td>447.31</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>most_profit_sales</th></tr><tr><td>447.31</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 43
@@ -280,7 +265,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 46,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -373,17 +357,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>least_costly_sale</th><th>FullDateTime</th><th>ProductCode</th><th>TransactionNo</th><th>EmployeeID</th><th>PromotionID</th><th>Quantity</th><th>SalesAmount</th><th>CostAmount</th></tr>",
-                            "<tr><td>1.21</td><td>2019-04-22 12:00:00.000</td><td>23</td><td>4</td><td>35</td><td>NULL</td><td>37</td><td>434.15</td><td>1.21</td></tr>",
-                            "<tr><td>1.24</td><td>2019-12-21 12:00:00.000</td><td>7</td><td>3</td><td>21</td><td>NULL</td><td>36</td><td>336.16</td><td>1.24</td></tr>",
-                            "<tr><td>1.24</td><td>2020-12-04 13:00:00.000</td><td>9</td><td>3</td><td>11</td><td>1</td><td>17</td><td>338.55</td><td>1.24</td></tr>",
-                            "<tr><td>1.27</td><td>2020-05-17 12:00:00.000</td><td>39</td><td>1</td><td>10</td><td>NULL</td><td>11</td><td>424.14</td><td>1.27</td></tr>",
-                            "<tr><td>1.28</td><td>2020-03-24 12:00:00.000</td><td>21</td><td>2</td><td>9</td><td>NULL</td><td>6</td><td>249.08</td><td>1.28</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>least_costly_sale</th><th>FullDateTime</th><th>ProductCode</th><th>TransactionNo</th><th>EmployeeID</th><th>PromotionID</th><th>Quantity</th><th>SalesAmount</th><th>CostAmount</th></tr><tr><td>1.21</td><td>2019-04-22 12:00:00.000</td><td>23</td><td>4</td><td>35</td><td>NULL</td><td>37</td><td>434.15</td><td>1.21</td></tr><tr><td>1.24</td><td>2019-12-21 12:00:00.000</td><td>7</td><td>3</td><td>21</td><td>NULL</td><td>36</td><td>336.16</td><td>1.24</td></tr><tr><td>1.24</td><td>2020-12-04 13:00:00.000</td><td>9</td><td>3</td><td>11</td><td>1</td><td>17</td><td>338.55</td><td>1.24</td></tr><tr><td>1.27</td><td>2020-05-17 12:00:00.000</td><td>39</td><td>1</td><td>10</td><td>NULL</td><td>11</td><td>424.14</td><td>1.27</td></tr><tr><td>1.28</td><td>2020-03-24 12:00:00.000</td><td>21</td><td>2</td><td>9</td><td>NULL</td><td>6</td><td>249.08</td><td>1.28</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 46
@@ -412,47 +388,110 @@
                 "language": "sql"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "(1 row affected)"
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.024"
-    },
-    "metadata": {}
-}, {
-    "output_type": "execute_result",
-    "metadata": {},
-    "execution_count": 53,
-    "data": {
-        "application/vnd.dataresource+json": {
-            "schema": {
-                "fields": [
-                    {
-                        "name": "(No column name)"
-                    }
-                ]
-            },
-            "data": [
                 {
-                    "(No column name)": "201"
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.024"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "execution_count": 53,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "(No column name)"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "(No column name)": "201"
+                                }
+                            ]
+                        },
+                        "text/html": "<table><tr><th>(No column name)</th></tr><tr><td>201</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
-            ]
-        },
-        "text/html": [
-            "<table>",
-            "<tr><th>(No column name)</th></tr>",
-            "<tr><td>201</td></tr>",
-            "</table>"
-        ]
-    }
-}
-],
+            ],
             "execution_count": 53
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "<span style=\"font-size: 11pt; font-family: Arial, sans-serif; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; font-variant-position: normal; vertical-align: baseline; white-space-collapse: preserve;\">Round the average sale amount in 3 decimal places.</span>"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "15557fe4-cf59-48d6-9964-d3b92c565e08"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT top 5 \r\n",
+                "    round(AVG(FS.SalesAmount),3) as avg_sales\r\n",
+                "from FactSales FS"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "e8ffbb47-26ce-43ed-ba8c-6fdea6228787",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.020"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 4,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "avg_sales"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "avg_sales": "225.013000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>avg_sales</th></tr>",
+                            "<tr><td>225.013000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 4
         }
     ]
 }
